<resources>
    <string name="loading_page_introduction_phrase">Keep your items fresh and good to use with Goods Guardian.\nGoods Guardian helps you keep track on Expiry Date of your goods.</string>
    <string name="app_name">Goods Guardian</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">Login</string>
    <string name="already_have_an_account"><u>Have an account ? Login.</u></string>
    <string name="does_not_have_an_account"><u>Don\'t have an account ? Sign up.</u></string>
    <string name="agree_to_terms_and_condition">I agree to terms and conditions of Goods Guardian. Therefore declaring that my information will be stored for safety purposes.</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_name">Enter name</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_in_your_account">Login in your account</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="login_all_caps_heading">LOGIN</string>
    <string name="add_new_item">Add New Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="quantity">Quantity</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="category">Category</string>
    <string name="add_item_photo">Add Item Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="change">CHANGE</string>
    <string name="category_icon">Category icon</string>
    <string name="items">Items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_text_view_in_with_500sdp_so_that_even_if_no_material_is_present_it_stll_fits_takes_up_the_whole_screen_making_it_slideable">setting text view in with 500sdp so that even if no material is present it still fits/takes up the whole screen making it slide able</string>
    <string name="expiring_today_1d"><![CDATA[> 😶 Expiring Today ( <=1d )]]></string>
    <string name="expires_tommorow_2d"><![CDATA[> 😐 EXPIRES TOMORROW( <=2d )]]></string>
    <string name="expires_in_a_week_7d"><![CDATA[> 🤨 EXPIRES IN A WEEK (<=7d)]]></string>
    <string name="expires_in_2_week_14d"><![CDATA[> 🙂 EXPIRES IN 2 WEEK (<=14d)]]></string>
    <string name="expire_in_a_month_30d"><![CDATA[> ☺️ EXPIRE IN A MONTH (<30d)]]></string>
    <string name="good_product_30d"><![CDATA[> 😍 GOOD PRODUCT (+30d)]]></string>
    <string name="contact_owner">Contact Owner</string>
    <string name="download">Download</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="report_error">Report Error</string>
    <string name="sort">Sort</string>
    <string name="upload">Upload</string>
    <string name="please_don_t_prees_any_button_or_exit_the_app">Please don\'t prees any button or exit the app.</string>
</resources>