<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item app:showAsAction="withText" android:title="@string/contact_owner" android:id="@+id/contact_owner" android:icon="@drawable/connection_icon"/>
    <item app:showAsAction="withText" android:title="@string/download" android:id="@+id/download" android:icon="@drawable/download"/>
    <item app:showAsAction="withText" android:title="@string/logout" android:id="@+id/logout" android:icon="@drawable/logout"/>
    <item app:showAsAction="withText" android:title="@string/notifications" android:id="@+id/notifications" android:icon="@drawable/notification_icon"/>
    <item app:showAsAction="withText" android:title="@string/report_error" android:id="@+id/report_error" android:icon="@drawable/problem"/>
    <item app:showAsAction="withText" android:title="@string/search" android:id="@+id/search" android:icon="@drawable/search_icon"/>
    <item app:showAsAction="withText" android:title="@string/sort" android:id="@+id/sort" android:icon="@drawable/sort"/>
    <item app:showAsAction="withText" android:title="@string/upload" android:id="@+id/upload" android:icon="@drawable/upload"/>
</menu>