<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream"
    tools:context=".Expiring_frag">
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiring_today_1d"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:id="@+id/expiring_today"
        android:background="@drawable/less_border_red_background_input_taker"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:background="@color/cream"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/expiring_today_recycler"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expires_tommorow_2d"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:id="@+id/expiring_tomorrow"
        android:background="@drawable/less_border_light_red_background_input_taker"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:background="@color/cream"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/expiring_tomorrow_recycler"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expires_in_a_week_7d"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:id="@+id/expiring_in_a_week"
        android:background="@drawable/less_border_lighter_red_background_input_taker"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:background="@color/cream"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/expiring_in_a_week_recycler"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expires_in_2_week_14d"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:id="@+id/expiring_in_two_week"
        android:background="@drawable/less_border_lighter_green_background_input_taker"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:background="@color/cream"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/expiring_in_two_week_recycler"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expire_in_a_month_30d"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:id="@+id/expiring_in_a_month"
        android:background="@drawable/less_border_light_green_background_input_taker"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:background="@color/cream"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/expiring_in_a_month_recycler"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/good_product_30d"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:id="@+id/expiring_after_a_month"
        android:background="@drawable/less_border_green_background_input_taker"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:background="@color/cream"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/expiring_after_a_month_recycler"
        android:layout_height="wrap_content"/>
</LinearLayout>