<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/cream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_new_item_page_information_gathering">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_item"
                    android:textAlignment="center"
                    android:textSize="@dimen/_28sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/item_name"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_20sdp" />
                    <EditText
                        android:id="@+id/item_name_at_add_items"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@drawable/less_border_white_background_input_taker"
                        android:hint="@string/item_name"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_18sdp"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/item_description"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_20sdp" />
                    <EditText
                        android:id="@+id/item_description_at_add_items"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@drawable/less_border_white_background_input_taker"
                        android:hint="@string/item_description"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_18sdp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/quantity"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_20sdp" />
                    <EditText
                        android:id="@+id/item_quantity_at_add_items"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@drawable/less_border_white_background_input_taker"
                        android:hint="@string/quantity"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_18sdp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/expiry_date"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_20sdp" />
                    <DatePicker
                        android:id="@+id/item_expiry_date_at_add_items"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@drawable/less_border_white_background_input_taker"
                        android:hint="@string/expiry_date"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_18sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/category"
                        android:id="@+id/spinner_shower_tv"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_20sdp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/less_border_white_background_input_taker"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:padding="@dimen/_7sdp"
                        android:id="@+id/spinner_shower_ll"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatSpinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dropdown"
                            android:backgroundTint="@color/black"
                            style="@style/black"
                            android:theme="@style/black"
                            android:id="@+id/spinner"
                            />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/add_item_photo"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_20sdp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/item_take_photo_at_add_items"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:layout_marginLeft="@dimen/_25sdp"
                            android:background="@drawable/less_border_white_background_input_taker"
                            android:hint="@string/take_photo"
                            android:textAlignment="viewStart"
                            android:padding="@dimen/_7sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="@dimen/_18sdp"
                            tools:ignore="RtlHardcoded" />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/item_take_choose_at_add_items"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:background="@drawable/less_border_white_background_input_taker"
                            android:hint="@string/choose_photo"
                            android:textAlignment="viewStart"
                            android:padding="@dimen/_7sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="@dimen/_18sdp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/save_item_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@drawable/less_border_white_background_input_taker"
                        android:text="@string/save"
                        android:textStyle="bold"
                        android:textSize="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_marginBottom="@dimen/_50sdp"
                        android:textColor="@color/black"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/change_item_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@drawable/less_border_white_background_input_taker"
                        android:text="@string/change"
                        android:textStyle="bold"
                        android:textSize="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_marginBottom="@dimen/_50sdp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>