<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/cream"
    android:layout_height="match_parent"
    tools:context=".Loading_Page">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_400sdp"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading_page_animation_sign_up_login"
                    app:lottie_autoPlay="true"
                    android:layout_margin="@dimen/_5sdp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_50sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_page_introduction_phrase"
                    android:textColor="@color/black"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:id="@+id/loading_page_sign_up"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/less_border_black_background_input_taker"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:id="@+id/loading_page_login"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:background="@drawable/less_border_black_background_input_taker"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>